# object-detection-flask-yolov8-server

./: .gitignore  MANIFEST.in  README.md  deploy.yaml  devfile.yaml  pyproject.toml  requirements.txt  wsgi.py
.s2i/: environment
docker/: Dockerfile  Dockerfile.s2i
src/app/flaskapp/: main.py
src/app/flaskapp/static/: observer.js  recorder.js
src/app/flaskapp/templates/: client.html  observer.html  recorder.html
src/test/flaskapp/: main_test.py
